fix(frontend): responsive layout issues chore(deps): update dependencies

--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -347,3 +347,10 @@ input[type="number"] {
 .slick-disabled {
   visibility: hidden;
 }
+
+@media only screen and (width <=960px) {
+  .slick-dots {
+    bottom: -60px !important;
+    padding: 0 25px !important;
+  }
+}
